--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,13 +6,21 @@
     <title>Pico y Placa Predictor</title>
     <script>
         async function checkCirculation() {
-            const plateNumber = document.getElementById("plateNumber").value;
+            const plateNumber = document.getElementById("plateNumber").value.toUpperCase(); // Convert to uppercase
             const date = document.getElementById("date").value;
 
-            // Validar que los campos no estén vacíos
-            if (!plateNumber || !date) {
-                document.getElementById("result").innerText = "Por favor, llene todos los campos.";
-                return; // Salir de la función si hay campos vacíos
+            // Check plate format (3 capital letters, -, 3 or 4 digits)
+            const platePattern = /^[A-Z]{3}-\d{3,4}$/;
+            if (!platePattern.test(plateNumber)) {
+                alert("Por favor, ingrese un número de placa válido (ej. ABC-123 o ABC-1234).");
+                return; // Exit function if plate is invalid
+            }
+
+            // check date format (dd/mm/yyyy)
+            const datePattern = /^(0[1-9]|[12][0-9]|3[01])\/(0[1-9]|1[0-2])\/\d{4}$/;
+            if (!datePattern.test(date)) {
+                alert("Por favor, ingrese una fecha válida (dd/mm/yyyy).");
+                return; //Exit function if date is invalid
             }
 
             const response = await fetch('/pico-placa/predictor', {
@@ -27,21 +35,27 @@
             document.getElementById("result").innerText = result;
         }
 
-        // Función para borrar campos y resultados
+        // Function to delete fields and results
         function clearFields() {
             document.getElementById("plateNumber").value = '';
             document.getElementById("date").value = '';
             document.getElementById("result").innerText = '';
         }
+		
+		// Convert plate input to uppercase automatically
+		function upperCasePlate() {
+		            const plateInput = document.getElementById("plateNumber");
+		            plateInput.value = plateInput.value.toUpperCase();
+		}
     </script>
 </head>
 <body>
     <h1>Pico y Placa Predictor</h1>
     <label for="plateNumber">Número de Placa:</label>
-    <input type="text" id="plateNumber" required>
+    <input type="text" id="plateNumber" pattern="[A-Z]{3}-\d{3,4}" required oninput="upperCasePlate()">
     <br>
     <label for="date">Fecha (dd/MM/yyyy):</label>
-    <input type="text" id="date" required>
+    <input type="text" id="date" pattern="(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/\d{4}" required>
     <br>
     <button onclick="checkCirculation()">Verificar Circulación</button>
     <button onclick="clearFields()">Borrar Campos</button> <!-- Botón para borrar -->
