--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pico y Placa Predictor</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
     <script>
         async function checkCirculation() {
             const plateNumber = document.getElementById("plateNumber").value.toUpperCase(); // Convert to uppercase
@@ -16,11 +17,11 @@
                 return; // Exit function if plate is invalid
             }
 
-            // check date format (dd/mm/yyyy)
-            const datePattern = /^(0[1-9]|[12][0-9]|3[01])\/(0[1-9]|1[0-2])\/\d{4}$/;
+            // Check date format (dd/mm/yyyy)
+            const datePattern = /^(0[1-9]|[12][0-9]|3[01])\/(0[1-9]|1[0-9]|2[0-9]|3[01])\/\d{4}$/;
             if (!datePattern.test(date)) {
                 alert("Por favor, ingrese una fecha válida (dd/mm/yyyy).");
-                return; //Exit function if date is invalid
+                return; // Exit function if date is invalid
             }
 
             const response = await fetch('/pico-placa/predictor', {
@@ -32,34 +33,67 @@
             });
 
             const result = await response.text();
-            document.getElementById("result").innerText = result;
+            createResultContainer(result);
+        }
+
+        function createResultContainer(message) {
+            const existingResultContainer = document.getElementById("resultContainer");
+            if (existingResultContainer) {
+                existingResultContainer.remove(); // Remove existing container if it exists
+            }
+
+            const newContainer = document.createElement("div");
+            newContainer.id = "resultContainer";
+            newContainer.className = "result-container"; // Add a class for styling
+            newContainer.innerText = message;
+            document.body.appendChild(newContainer);
         }
 
         // Function to delete fields and results
         function clearFields() {
             document.getElementById("plateNumber").value = '';
             document.getElementById("date").value = '';
-            document.getElementById("result").innerText = '';
+            const existingResultContainer = document.getElementById("resultContainer");
+            if (existingResultContainer) {
+                existingResultContainer.remove(); // Remove result container if it exists
+            }
         }
-		
-		// Convert plate input to uppercase automatically
-		function upperCasePlate() {
-		            const plateInput = document.getElementById("plateNumber");
-		            plateInput.value = plateInput.value.toUpperCase();
-		}
+
+        // Convert plate input to uppercase automatically
+        function upperCasePlate() {
+            const plateInput = document.getElementById("plateNumber");
+            plateInput.value = plateInput.value.toUpperCase();
+        }
+
+		// Function to handle focus and clear placeholder
+       function clearPlaceholder(inputField, placeholder) {
+           if (inputField.value === placeholder) {
+               inputField.value = '';
+               inputField.style.color = 'black'; // Reset color to black
+           }
+       }
+
+       // Function to handle blur and reset placeholder if empty
+       function resetPlaceholder(inputField, placeholder) {
+           if (inputField.value === '') {
+               inputField.value = placeholder;
+               inputField.style.color = '#bbb'; // Set to light gray
+           }
+       }
     </script>
 </head>
 <body>
-    <h1>Pico y Placa Predictor</h1>
-    <label for="plateNumber">Número de Placa:</label>
-    <input type="text" id="plateNumber" pattern="[A-Z]{3}-\d{3,4}" required oninput="upperCasePlate()">
-    <br>
-    <label for="date">Fecha (dd/MM/yyyy):</label>
-    <input type="text" id="date" pattern="(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/\d{4}" required>
-    <br>
-    <button onclick="checkCirculation()">Verificar Circulación</button>
-    <button onclick="clearFields()">Borrar Campos</button> <!-- Botón para borrar -->
-    <h2>Resultado:</h2>
-    <div id="result"></div>
+    <h1> Predictor de Pico y Placa</h1>
+    <div class="container"> <!-- Centered container -->
+        <label for="plateNumber">Número de Placa:</label>
+        <input type="text" id="plateNumber" value="ABC-1234" onfocus="clearPlaceholder(this, 'ABC-1234')" onblur="resetPlaceholder(this, 'ABC-1234')" style="color: #bbb;" oninput="upperCasePlate()">
+        <br>
+        <label for="date">Fecha:</label>
+        <input type="text" id="date" value="dd/mm/yyyy" onfocus="clearPlaceholder(this, 'dd/mm/yyyy')" onblur="resetPlaceholder(this, 'dd/mm/yyyy')" style="color: #bbb;">
+        <br>
+        <button onclick="checkCirculation()">Consultar</button>
+		<button class="clear-button" onclick="clearFields()">Limpiar</button>
+    </div>
+
 </body>
 </html>
